Fix Feature TDI-24558 :  Add a custom possibility in the Hadoop versions https://jira.talendforge.org/browse/TDI-24558
git-svn-id: http://talendforge.org/svn/tos/trunk@98790 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tHBaseConnection/tHBaseConnection_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHBaseConnection/tHBaseConnection_messages.properties
@@ -18,6 +18,7 @@ DISTRIBUTION.ITEM.HORTONWORKS=HortonWorks
 DISTRIBUTION.ITEM.CLOUDERA=Cloudera
 DISTRIBUTION.ITEM.APACHE=Apache
 DISTRIBUTION.ITEM.MAPR=MapR
+DISTRIBUTION.ITEM.CUSTOM=Custom
 
 HBASE_VERSION.NAME=HBase version
 HBASE_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1.0.0
