--- a/org.talend.designer.components.bigdata/components/tHDFSConnection/tHDFSConnection_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHDFSConnection/tHDFSConnection_messages.properties
@@ -11,6 +11,7 @@ DISTRIBUTION.ITEM.HORTONWORKS=HortonWorks
 DISTRIBUTION.ITEM.CLOUDERA=Cloudera
 DISTRIBUTION.ITEM.MAPR=MapR
 DISTRIBUTION.ITEM.APACHE=Apache
+DISTRIBUTION.ITEM.CUSTOM=Custom
 
 DB_VERSION.NAME=Hadoop version
 DB_VERSION.ITEM.APACHE_0_20_204=Apache 0.20.204
@@ -22,6 +23,11 @@ DB_VERSION.ITEM.APACHE_1_0_0=Apache 1.0.0
 DB_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1.0.0
 DB_VERSION.ITEM.HDP_1_2=Hortonworks Data Platform V1.2.0(Bimota)
 DB_VERSION.ITEM.Cloudera_CDH4=Cloudera CDH4
+
+AUTHENTICATION_MODE.NAME=Authentication
+AUTHENTICATION_MODE.ITEM.USERNAME=Username
+AUTHENTICATION_MODE.ITEM.KRB=Kerberos
+AUTHENTICATION_MODE.ITEM.UGI=Usergroup
 
 FS_DEFAULT_NAME.NAME=NameNode URI
 
