--- a/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
@@ -14,6 +14,7 @@ DISTRIBUTION.ITEM.HORTONWORKS=HortonWorks
 DISTRIBUTION.ITEM.CLOUDERA=Cloudera
 DISTRIBUTION.ITEM.MAPR=MapR
 DISTRIBUTION.ITEM.APACHE=Apache
+DISTRIBUTION.ITEM.CUSTOM=Custom
 
 PIG_VERSION.NAME=Version
 PIG_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1.0.0
@@ -71,6 +72,7 @@ PARTITION_FILTER.ITEM.PART_VALUE=Partition value
 
 USE_KRB.NAME=Use kerberos authentication
 NAMENODE_PRINCIPAL.NAME=Namenode principal
+JOBTRACKER_PRINCIPAL.NAME=JobTracker principal
 
 ADVANCED_CONFIGURATION.NAME=Advanced configuration
 DRIVER_JAR.NAME=Register jar
