--- a/org.talend.designer.components.bigdata/components/tPigStoreResult/tPigStoreResult_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tPigStoreResult/tPigStoreResult_messages.properties
@@ -65,6 +65,7 @@ DISTRIBUTION.ITEM.HORTONWORKS=HortonWorks
 DISTRIBUTION.ITEM.CLOUDERA=Cloudera
 DISTRIBUTION.ITEM.MAPR=MapR
 DISTRIBUTION.ITEM.APACHE=Apache
+DISTRIBUTION.ITEM.CUSTOM=Custom
 
 HBASE_VERSION.NAME=Version
 HBASE_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1.0.0
