--- a/org.talend.designer.components.bigdata/components/tHDFSOutput/tHDFSOutput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHDFSOutput/tHDFSOutput_messages.properties
@@ -14,6 +14,12 @@ DISTRIBUTION.ITEM.HORTONWORKS=HortonWorks
 DISTRIBUTION.ITEM.CLOUDERA=Cloudera
 DISTRIBUTION.ITEM.MAPR=MapR
 DISTRIBUTION.ITEM.APACHE=Apache
+DISTRIBUTION.ITEM.CUSTOM=Custom
+
+AUTHENTICATION_MODE.NAME=Authentication
+AUTHENTICATION_MODE.ITEM.USERNAME=Username
+AUTHENTICATION_MODE.ITEM.KRB=Kerberos
+AUTHENTICATION_MODE.ITEM.UGI=Usergroup
 
 DB_VERSION.NAME=Hadoop version
 DB_VERSION.ITEM.APACHE_0_20_204=Apache 0.20.204
