Fix Feature TDI-24651 :Support the latest version of MongoDB . https://jira.talendforge.org/browse/TDI-24651
git-svn-id: http://talendforge.org/svn/tos/trunk@98871 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tMongoDBConnection/tMongoDBConnection_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tMongoDBConnection/tMongoDBConnection_messages.properties
@@ -16,3 +16,5 @@ REPLICA_SET.ITEM.REPLICA_HOST=Replica host
 REPLICA_SET.ITEM.REPLICA_PORT=Replica port
 CONNECTION.NAME=Connection
 AUTHENTICATION.NAME=Authentication
+DB_VERSION.NAME=DB Version
+DB_VERSION.ITEM.MONGO_2_2_3=Mongo 2.2.3
