--- a/org.talend.designer.components.bigdata/components/tMongoDBRow/tMongoDBRow_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tMongoDBRow/tMongoDBRow_messages.properties
@@ -24,4 +24,5 @@ REPLICA_SET.ITEM.REPLICA_PORT=Replica port
 CONNECTION.NAME=Connection
 AUTHENTICATION.NAME=Authentication
 DB_VERSION.NAME=DB Version
-DB_VERSION.ITEM.MONGO_2_2_3=Mongo 2.2.3
+DB_VERSION.ITEM.MONGODB_2_2_3=MongoDB 2.2.3
+DB_VERSION.ITEM.MONGODB_2_1_2=MongoDB 2.1.2
