feature TDI-24445 modified: Refactor some parts.
git-svn-id: http://talendforge.org/svn/tis_shared/trunk@98894 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.repository.hcatalog/plugin.xml
+++ b/org.talend.repository.hcatalog/plugin.xml
@@ -12,10 +12,12 @@
          point="org.talend.core.repository.repository_node_provider">
       <repositoryNode
             alias="HCAT"
-            class="org.talend.repository.hcatalog.node.HCatalogExtendNode"
             folder="metadata/hadoop/hcatalog"
+            icon="icons/hadoop-logo-16x16.png"
             isResouce="true"
             label="%hcatalog"
+            ordinal="51"
+            parentNodeType="HADOOPCLUSTER"
             products="DI"
             type="HCATALOG">
       </repositoryNode>
