feature TDI-24445 modified: fixed some problems.
git-svn-id: http://talendforge.org/svn/tis_shared/trunk@98956 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.repository.hadoopcluster/plugin.xml
+++ b/org.talend.repository.hadoopcluster/plugin.xml
@@ -46,75 +46,9 @@
             class="org.talend.repository.hadoopcluster.tester.HadoopClusterMetadataNodeTester"
             id="org.talend.repository.hadoopcluster.node.tester.hadoopcluster"
             namespace="org.talend.repository.node.metadata"
-            properties="isHadoopClusterConnection"
+            properties="isHadoopClusterConnection,isHadoopSubconnection,isHadoopSubconnectionSchema,isHadoopSubconnectionSchemaColumn"
             type="org.talend.repository.model.RepositoryNode">
       </propertyTester>
-   </extension>
-   <extension
-         point="org.eclipse.ui.navigator.navigatorContent">
-      <navigatorContent
-            contentProvider="org.talend.repository.hadoopcluster.ui.MetadataHadoopClusterContentProvider"
-            icon="icons/hadoop-logo-16x16.png"
-            id="org.talend.repository.viewer.metadata.hadoopcluster"
-            labelProvider="org.talend.repository.viewer.label.RepositoryViewLabelProvider"
-            name="HadoopCluster"
-            priority="high">
-         <possibleChildren>
-            <and>
-               <instanceof
-                     value="org.talend.repository.model.RepositoryNode">
-               </instanceof>
-               <or>
-                  <test
-                        property="org.talend.repository.node.metadata.isHadoopClusterConnection">
-                  </test>
-                  <test
-                        property="org.talend.repository.node.metadata.isSchema">
-                  </test>
-                  <test
-                        property="org.talend.repository.node.metadata.isSchemaColumn">
-                  </test>
-               </or>
-            </and>
-         </possibleChildren>
-         <triggerPoints>
-            <and>
-               <instanceof
-                     value="org.talend.repository.model.RepositoryNode">
-               </instanceof>
-               <or>
-                  <test
-                        forcePluginActivation="true"
-                        property="org.talend.repository.node.isMetadataTopNode">
-                  </test>
-                  <test
-                        property="org.talend.repository.node.metadata.isHadoopClusterConnection">
-                  </test>
-               </or>
-            </and>
-         </triggerPoints>
-         <actionProvider
-               class="org.talend.repository.metadata.action.MetedataNodeActionProvier"
-               id="org.talend.repository.hadoopcluster.action.provider.id">
-            <enablement>
-               <and>
-                  <instanceof
-                        value="org.talend.repository.model.RepositoryNode">
-                  </instanceof>
-                  <test
-                        forcePluginActivation="true"
-                        property="org.talend.repository.node.metadata.isHadoopClusterConnection">
-                  </test>
-                  <not>
-                     <test
-                           forcePluginActivation="true"
-                           property="org.talend.repository.node.isDeleted">
-                     </test>
-                  </not>
-               </and>
-            </enablement>
-         </actionProvider>
-      </navigatorContent>
    </extension>
    <extension
          point="org.talend.core.repositoryContextualsActions">
@@ -139,6 +73,99 @@
             class="org.talend.repository.hadoopcluster.service.HadoopClusterService"
             serviceId="IHadoopClusterService">
       </Service>
+   </extension>
+   <extension
+         point="org.eclipse.ui.navigator.navigatorContent">
+      <navigatorContent
+            contentProvider="org.talend.repository.hadoopcluster.ui.MetadataHadoopClusterContentProvider"
+            icon="icons/hadoop-logo-16x16.png"
+            id="org.talend.repository.viewer.metadata.hadoopcluster"
+            labelProvider="org.talend.repository.viewer.label.RepositoryViewLabelProvider"
+            name="HadoopCluster"
+            priority="high">
+         <possibleChildren>
+            <and>
+               <instanceof
+                     value="org.talend.repository.model.RepositoryNode">
+               </instanceof>
+               <or>
+                  <test
+                        property="org.talend.repository.node.metadata.isHadoopClusterConnection">
+                  </test>
+                  <test
+                        property="org.talend.repository.node.metadata.isHadoopSubconnection">
+                  </test>
+                  <test
+                        property="org.talend.repository.node.metadata.isHadoopSubconnectionSchema">
+                  </test>
+                  <test
+                        property="org.talend.repository.node.metadata.isHadoopSubconnectionSchemaColumn">
+                  </test>
+               </or>
+            </and>
+         </possibleChildren>
+         <triggerPoints>
+            <and>
+               <instanceof
+                     value="org.talend.repository.model.RepositoryNode">
+               </instanceof>
+               <or>
+                  <test
+                        forcePluginActivation="true"
+                        property="org.talend.repository.node.isMetadataTopNode">
+                  </test>
+                  <test
+                        property="org.talend.repository.node.metadata.isHadoopClusterConnection">
+                  </test>
+                  <test
+                        property="org.talend.repository.node.metadata.isHadoopSubconnection">
+                  </test>
+               </or>
+            </and>
+         </triggerPoints>
+         <actionProvider
+               class="org.talend.repository.metadata.action.MetedataNodeActionProvier"
+               id="org.talend.repository.hadoopcluster.action.provider.id">
+            <enablement>
+               <and>
+                  <instanceof
+                        value="org.talend.repository.model.RepositoryNode">
+                  </instanceof>
+                  <or>
+                     <test
+                           forcePluginActivation="true"
+                           property="org.talend.repository.node.metadata.isHadoopClusterConnection">
+                     </test>
+                     <test
+                           property="org.talend.repository.node.metadata.isHadoopSubconnection">
+                     </test>
+                     <test
+                           property="org.talend.repository.node.metadata.isHadoopSubconnectionSchema">
+                     </test>
+                     <test
+                           property="org.talend.repository.node.metadata.isHadoopSubconnectionSchemaColumn">
+                     </test></or>
+                  <not>
+                     <test
+                           forcePluginActivation="true"
+                           property="org.talend.repository.node.isDeleted">
+                     </test>
+                  </not>
+               </and>
+            </enablement>
+         </actionProvider>
+      </navigatorContent>
+   </extension>
+   <extension
+         point="org.eclipse.ui.navigator.viewer">
+      <viewerContentBinding
+            viewerId="org.talend.repository.cnf.view">
+         <includes>
+            <contentExtension
+                  pattern="org.talend.repository.hadoopcluster.action.*">
+            </contentExtension>
+         </includes>
+      </viewerContentBinding>
    </extension>
 
 </plugin>
