--- a/org.talend.designer.components.bigdata/components/tHDFSOutput/tHDFSOutput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHDFSOutput/tHDFSOutput_messages.properties
@@ -15,6 +15,7 @@ DISTRIBUTION.ITEM.CLOUDERA=Cloudera
 DISTRIBUTION.ITEM.MAPR=MapR
 DISTRIBUTION.ITEM.APACHE=Apache
 DISTRIBUTION.ITEM.CUSTOM=Custom
+DISTRIBUTION.ITEM.AMAZON_EMR=Amazon EMR
 
 AUTHENTICATION_MODE.NAME=Authentication
 AUTHENTICATION_MODE.ITEM.USERNAME=Username
@@ -31,6 +32,8 @@ DB_VERSION.ITEM.APACHE_1_0_0=Apache 1.0.0
 DB_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1.0.0
 DB_VERSION.ITEM.HDP_1_2=Hortonworks Data Platform V1.2.0(Bimota)
 DB_VERSION.ITEM.Cloudera_CDH4=Cloudera CDH4
+DB_VERSION.ITEM.MapR_EMR=MapR 1.2.8
+DB_VERSION.ITEM.APACHE_1_0_3_EMR=Apache 1.0.3
 
 FS_DEFAULT_NAME.NAME=NameNode URI
 USERNAME.NAME=User name
