feature TDI-24422: add EMR support for Pig, Hbase and Hive
git-svn-id: http://talendforge.org/svn/tos/trunk@99029 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tHiveInput/tHiveInput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHiveInput/tHiveInput_messages.properties
@@ -34,6 +34,7 @@ DISTRIBUTION.ITEM.APACHE=Apache
 DISTRIBUTION.ITEM.CLOUDERA=Cloudera
 DISTRIBUTION.ITEM.MAPR=MapR
 DISTRIBUTION.ITEM.CUSTOM=Custom
+DISTRIBUTION.ITEM.AMAZON_EMR=Amazon EMR
 
 HIVE_VERSION.NAME=Hive version
 HIVE_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1.0.0
@@ -44,6 +45,8 @@ HIVE_VERSION.ITEM.Cloudera_CDH4=Cloudera CDH4
 HIVE_VERSION.ITEM.MAPR2=MapR 2.0.0
 HIVE_VERSION.ITEM.Cloudera_CDH3=Cloudera CDH3
 HIVE_VERSION.ITEM.MAPR1=MapR 1.2.0
+HIVE_VERSION.ITEM.MapR_EMR=MapR 1.2.8
+HIVE_VERSION.ITEM.APACHE_1_0_3_EMR=Apache 1.0.3 (Hive 0.8.1)
 
 CONNECTION_MODE.NAME=Connection mode
 CONNECTION_MODE.ITEM.EMBEDDED=Embedded
