--- a/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
@@ -15,6 +15,7 @@ DISTRIBUTION.ITEM.CLOUDERA=Cloudera
 DISTRIBUTION.ITEM.MAPR=MapR
 DISTRIBUTION.ITEM.APACHE=Apache
 DISTRIBUTION.ITEM.CUSTOM=Custom
+DISTRIBUTION.ITEM.AMAZON_EMR=Amazon EMR
 
 PIG_VERSION.NAME=Version
 PIG_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1.0.0
@@ -25,6 +26,8 @@ PIG_VERSION.ITEM.MAPR=MapR 1.2.0
 PIG_VERSION.ITEM.MAPR2=MapR 2.0.0
 PIG_VERSION.ITEM.APACHE_1_0_0=Apache 1.0.0 (Pig 0.9.2)
 PIG_VERSION.ITEM.CLOUDERA_CDH4=Cloudera CDH4
+PIG_VERSION.ITEM.MapR_EMR=MapR 1.2.8
+PIG_VERSION.ITEM.APACHE_1_0_3_EMR=Apache 1.0.3 (Pig 0.9.2)
 
 FS_DEFAULT_NAME.NAME=NameNode URI
 MAPRED_JOB_TRACKER.NAME=JobTracker Host
