TDI-24247: change a property value
git-svn-id: http://talendforge.org/svn/tos/trunk@99060 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
@@ -81,7 +81,7 @@ ADVANCED_CONFIGURATION.NAME=Advanced configuration
 DRIVER_JAR.NAME=Register jar
 DRIVER_JAR.ITEM.JAR_NAME=Lib path
 
-COMPRESS.NAME=Force to compress the output data
+COMPRESS.NAME=Force the output data compression
 COMPRESSION.NAME=
 COMPRESSION.ITEM.GZIP=GZIP
 COMPRESSION.ITEM.BZIP2=BZIP2
