Fix Feature TDI-24652 :Support the latest version of Cassandra . https://jira.talendforge.org/browse/TDI-24652
git-svn-id: http://talendforge.org/svn/tos/trunk@99087 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tCassandraConnection/tCassandraConnection_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tCassandraConnection/tCassandraConnection_messages.properties
@@ -11,3 +11,6 @@ PORT.NAME=Port
 PROPERTY.NAME=PROPERTY
 REQUIRED_AUTHENTICATION.NAME=Required authentication
 USERNAME.NAME=Username
+DB_VERSION.NAME=DB Version
+DB_VERSION.ITEM.CASSANDRA_1_1_2=Cassandra 1.1.2
+DB_VERSION.ITEM.CASSANDRA_1_2_2=Cassandra 1.2.2
