--- a/org.talend.designer.components.bigdata/components/tCassandraInput/tCassandraInput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tCassandraInput/tCassandraInput_messages.properties
@@ -61,3 +61,6 @@ COLUMNS.NAME=Columns
 SUPER_KEY_COLUMN.NAME=Super columns
 USERNAME.NAME=Username
 USE_EXISTING_CONNECTION.NAME=Use existing connection
+DB_VERSION.NAME=DB Version
+DB_VERSION.ITEM.CASSANDRA_1_1_2=Cassandra 1.1.2
+DB_VERSION.ITEM.CASSANDRA_1_2_2=Cassandra 1.2.2
