--- a/org.talend.designer.components.bigdata/components/tCassandraOutput/tCassandraOutput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tCassandraOutput/tCassandraOutput_messages.properties
@@ -47,3 +47,6 @@ REQUIRED_AUTHENTICATION.NAME=Required authentication
 SUPER_KEY_COLUMN.NAME=Super columns
 USERNAME.NAME=Username
 USE_EXISTING_CONNECTION.NAME=Use existing connection
+DB_VERSION.NAME=DB Version
+DB_VERSION.ITEM.CASSANDRA_1_1_2=Cassandra 1.1.2
+DB_VERSION.ITEM.CASSANDRA_1_2_2=Cassandra 1.2.2
