fix Feature TDI-24250: Sqoop implementation using the Java API https://jira.talendforge.org/browse/TDI-24250
git-svn-id: http://talendforge.org/svn/tos/trunk@99090 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tSqoopExport/tSqoopExport_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tSqoopExport/tSqoopExport_messages.properties
@@ -37,3 +37,67 @@ ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--outdir=--outdir
 ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--package-name=--package-name
 
 OUTPUT_MESSAGE.NAME=Output Message
+
+
+ADDITIONAL_JAVA.NAME=Additional Arguments
+ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT=Argument
+ADDITIONAL_JAVA.ITEM.ADDITIONAL_VALUE=Value
+ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--driver=--driver
+ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--hadoop-home=--hadoop-home
+ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--direct-split-size=--direct-split-size
+ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--inline-lob-limit=--inline-lob-limit
+ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--split-by=--split-by
+ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--warehouse-dir=--warehouse-dir
+ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--enclosed-by=--enclosed-by
+ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--escaped-by=--escaped-by
+ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--fields-terminated-by=--fields-terminated-by
+ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--lines-terminated-by=--lines-terminated-by
+ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--optionally-enclosed-by=--optionally-enclosed-by
+ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--input-enclosed-by=--input-enclosed-by
+ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--input-escaped-by=--input-escaped-by
+ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--input-fields-terminated-by=--input-fields-terminated-by
+ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--input-lines-terminated-by=--input-lines-terminated-by
+ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--input-optionally-enclosed-by=--input-optionally-enclosed-by
+ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--hive-home=--hive-home
+ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--hive-import=--hive-import
+ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--hive-overwrite=--hive-overwrite
+ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--hive-table=--hive-table
+ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--bindir=--bindir
+ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--class-name=--class-name
+ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--jar-file=--jar-file
+ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--outdir=--outdir
+ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--package-name=--package-name
+
+OUTPUT_MESSAGE.NAME=Output Message
+
+QUERY_MODE.NAME=Query
+
+USE_QUERY.NAME=Use query
+QUERY.NAME=Query
+
+USE_SPLIT.NAME=Specify Split By
+SPLIT.NAME=
+
+MODE.NAME=Mode
+USE_COMMANDLINE.NAME=Use Commandline
+USE_JAVAAPI.NAME=Use Java API
+
+VERSION.NAME=Version
+
+DISTRIBUTION.NAME=Distribution
+DISTRIBUTION.ITEM.HORTONWORKS=HortonWorks
+DISTRIBUTION.ITEM.CLOUDERA=Cloudera
+DISTRIBUTION.ITEM.MAPR=MapR
+
+DB_VERSION.NAME=Hadoop version
+DB_VERSION.ITEM.Cloudera_0.20_CDH3U1=Cloudera 0.20 CDH3U1
+DB_VERSION.ITEM.MapR=MapR 1.2.0
+DB_VERSION.ITEM.MapR2=MapR 2.0.0
+DB_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1.0.0
+DB_VERSION.ITEM.HDP_1_2=Hortonworks Data Platform V1.2.0(Bimota)
+DB_VERSION.ITEM.Cloudera_CDH4=Cloudera CDH4
+
+FS_DEFAULT_NAME.NAME=NameNode URI
+MAPRED_JOB_TRACKER.NAME=JobTracker Host
+
+CONFIGURATION.NAME=Configuration
