bug TDI-24954 fixed : Hadoop subitems like hdfs, hcatalog cannot display correctly in RepositoryReviewDialog
git-svn-id: http://talendforge.org/svn/tis_shared/trunk@99158 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.repository.hadoopcluster/plugin.xml
+++ b/org.talend.repository.hadoopcluster/plugin.xml
@@ -26,10 +26,11 @@
          point="org.talend.core.repository.repository_node_provider">
       <repositoryNode
             alias="HC"
-            class="org.talend.repository.hadoopcluster.node.HadoopClusterExtendNode"
             folder="metadata/hadoop/hadoopcluster"
+            icon="icons/hadoop-logo-16x16.png"
             isResouce="true"
             label="%hadoopCluster"
+            ordinal="50"
             products="DI"
             type="HADOOPCLUSTER">
       </repositoryNode>
