feature TDI-24441 added: Add the possibility to link the view to a defined cluster in repository mode.
git-svn-id: http://talendforge.org/svn/tis_shared/trunk@99237 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.repository.oozie/plugin.xml
+++ b/org.talend.repository.oozie/plugin.xml
@@ -52,5 +52,12 @@
             name="OOZIE">
       </seeker>
    </extension>
+   <extension
+         point="org.talend.core.runtime.service">
+      <Service
+            class="org.talend.repository.oozie.service.OozieService"
+            serviceId="IOozieService">
+      </Service>
+   </extension>
 
 </plugin>
