--- a/org.talend.designer.pigmap/build.properties
+++ b/org.talend.designer.pigmap/build.properties
@@ -1,6 +1,7 @@
-source.. = src/
+source.. = src/main/java/
 output.. = class/
 bin.includes = plugin.xml,\
                META-INF/,\
                .,\
-               icons/
+               icons/,\
+               plugin.properties
