Fix Feature TDI-24752 :Fixe bugs about Couchbase components. https://jira.talendforge.org/browse/TDI-24752
git-svn-id: http://talendforge.org/svn/tos/trunk@99259 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tCouchbaseIn/tCouchbaseIn_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tCouchbaseIn/tCouchbaseIn_messages.properties
@@ -17,6 +17,7 @@ ISJSON.NAME=Is JSON
 INCLUSIVEEND.NAME=Inclusive end
 DESCENDING.NAME=Descending
 LIMIT.NAME=Limit
+SKIP.NAME=Skip
 STALE.NAME=Stale
 STALE.ITEM.OK=OK
 STALE.ITEM.FALSE=FALSE
