--- a/org.talend.designer.components.bigdata/components/tCouchbaseInput/tCouchbaseInput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tCouchbaseInput/tCouchbaseInput_messages.properties
@@ -17,6 +17,7 @@ FROMVIEW.NAME=Get from view
 ISREDUCE.NAME=Is Reduce
 DESCENDING.NAME=Descending
 LIMIT.NAME=Limit
+SKIP.NAME=Skip
 STALE.NAME=Stale
 STALE.ITEM.OK=OK
 STALE.ITEM.FALSE=FALSE
