Fix Feature TDI-24941 :  make tELTHiveMap to support HBASE as the input and output https://jira.talendforge.org/browse/TDI-24941
git-svn-id: http://talendforge.org/svn/tos/trunk@99322 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tELTHiveMap/tELTHiveMap_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tELTHiveMap/tELTHiveMap_messages.properties
@@ -60,3 +60,19 @@ HADOOP_ADVANCED_PROPERTIES.ITEM.VALUE=Value
 
 CONN.NAME=Connection
 HADOOP_PROPS.NAME=Hadoop properties
+
+HBASE_GROUP.NAME=HBase Configuration
+STORE_BY_HBASE.NAME=Store by HBase
+DEFINE_REGISTER_JAR.NAME=Define the jars to register for HBase
+
+ZOOKEEPER_QUORUM.NAME=Zookeeper quorum 
+ZOOKEEPER_CLIENT_PORT.NAME=Zookeeper client port
+
+REGISTER_JAR.NAME=Register jar for HBase
+REGISTER_JAR.ITEM.JAR_NAME=Jar name
+REGISTER_JAR.ITEM.JAR_PATH=Jar path
+
+REGISTER_JAR.ITEM.JAR_NAME.ITEM.HIVE-HBASE-HANDLER=hive-hbase-handler
+REGISTER_JAR.ITEM.JAR_NAME.ITEM.HBASE=hbase
+REGISTER_JAR.ITEM.JAR_NAME.ITEM.ZOOKEEPER=zookeeper
+REGISTER_JAR.ITEM.JAR_NAME.ITEM.PROTOBUF-JAVA=protobuf-java
