--- a/org.talend.designer.components.bigdata/components/tHDFSCompare/tHDFSCompare_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHDFSCompare/tHDFSCompare_messages.properties
@@ -55,3 +55,7 @@ NO_DIFFER_MESSAGE.NAME=If no differences detected, display
 PRINT.NAME=Print to console
 
 CONN.NAME=Connection
+
+CUSTOM_COMMON_SETTINGS.NAME=Custom common settings
+CUSTOM_JARS.NAME=Custom jars
+CUSTOM_JARS.ITEM.JAR_NAME=Jar name
