--- a/org.talend.designer.components.bigdata/components/tHDFSDelete/tHDFSDelete_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHDFSDelete/tHDFSDelete_messages.properties
@@ -48,3 +48,7 @@ USE_KRB.NAME=Use kerberos authentication
 NAMENODE_PRINCIPAL.NAME=Namenode principal
 
 CONN.NAME=Connection
+
+CUSTOM_COMMON_SETTINGS.NAME=Custom common settings
+CUSTOM_JARS.NAME=Custom jars
+CUSTOM_JARS.ITEM.JAR_NAME=Jar name
