--- a/org.talend.designer.components.bigdata/components/tHDFSProperties/tHDFSProperties_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHDFSProperties/tHDFSProperties_messages.properties
@@ -47,3 +47,7 @@ FILENAME.NAME=File
 MD5.NAME=Get file checksum
 
 CONN.NAME=Connection
+
+CUSTOM_COMMON_SETTINGS.NAME=Custom common settings
+CUSTOM_JARS.NAME=Custom jars
+CUSTOM_JARS.ITEM.JAR_NAME=Jar name
