--- a/org.talend.designer.components.bigdata/components/tHDFSRename/tHDFSRename_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHDFSRename/tHDFSRename_messages.properties
@@ -52,3 +52,7 @@ NAMENODE_PRINCIPAL.NAME=Namenode principal
 CURRENT_STATUS.NAME=Current Status
 
 CONN.NAME=Connection
+
+CUSTOM_COMMON_SETTINGS.NAME=Custom common settings
+CUSTOM_JARS.NAME=Custom jars
+CUSTOM_JARS.ITEM.JAR_NAME=Jar name
