--- a/org.talend.designer.components.bigdata/components/tHiveInput/tHiveInput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHiveInput/tHiveInput_messages.properties
@@ -83,3 +83,7 @@ REGISTER_JAR.ITEM.JAR_NAME.ITEM.HIVE-HBASE-HANDLER=hive-hbase-handler
 REGISTER_JAR.ITEM.JAR_NAME.ITEM.HBASE=hbase
 REGISTER_JAR.ITEM.JAR_NAME.ITEM.ZOOKEEPER=zookeeper
 REGISTER_JAR.ITEM.JAR_NAME.ITEM.PROTOBUF-JAVA=protobuf-java
+
+CUSTOM_COMMON_SETTINGS.NAME=Custom common settings
+CUSTOM_JARS.NAME=Custom jars
+CUSTOM_JARS.ITEM.JAR_NAME=Jar name
