--- a/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
@@ -111,3 +111,6 @@ HBASESTORAGE_PARAMETER.ITEM.PARAM_NAME.ITEM.LTE=lte
 HBASESTORAGE_PARAMETER.ITEM.PARAM_NAME.ITEM.CACHING=caching
 HBASESTORAGE_PARAMETER.ITEM.PARAM_NAME.ITEM.LIMIT=limit
 HBASESTORAGE_PARAMETER.ITEM.PARAM_NAME.ITEM.CASTER=caster
+
+CUSTOM_JARS.NAME=Custom jars
+CUSTOM_JARS.ITEM.JAR_NAME=Jar name
