--- a/org.talend.designer.components.bigdata/components/tHDFSCopy/tHDFSCopy_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHDFSCopy/tHDFSCopy_messages.properties
@@ -55,3 +55,7 @@ DESTINATION_FILEPATH.NAME=Destination file or directory path
 SOURCE_FILEPATH.NAME=Source file or directory path
 
 CONN.NAME=Connection
+
+CUSTOM_COMMON_SETTINGS.NAME=Custom common settings
+CUSTOM_JARS.NAME=Custom jars
+CUSTOM_JARS.ITEM.JAR_NAME=Jar name
