--- a/org.talend.designer.components.bigdata/components/tHDFSList/tHDFSList_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHDFSList/tHDFSList_messages.properties
@@ -74,3 +74,7 @@ ORDER_ACTION_DESC.NAME=DESC
 NB_FILE.NAME=Number of files
 
 CONN.NAME=Connection
+
+CUSTOM_COMMON_SETTINGS.NAME=Custom common settings
+CUSTOM_JARS.NAME=Custom jars
+CUSTOM_JARS.ITEM.JAR_NAME=Jar name
