--- a/org.talend.designer.components.bigdata/components/tHDFSOutput/tHDFSOutput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHDFSOutput/tHDFSOutput_messages.properties
@@ -64,3 +64,7 @@ COMPRESSION.NAME=
 COMPRESSION.ITEM.GZIP=GZIP
 COMPRESSION.ITEM.BZIP2=BZIP2
 COMPRESSION_GROUP.NAME=Compression
+
+CUSTOM_COMMON_SETTINGS.NAME=Custom common settings
+CUSTOM_JARS.NAME=Custom jars
+CUSTOM_JARS.ITEM.JAR_NAME=Jar name
