Fixed New Feature TDI-24417: Create CouchDB components https://jira.talendforge.org/browse/TDI-24417
git-svn-id: http://talendforge.org/svn/tos/trunk@99400 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tCouchDBConnection/tCouchDBConnection_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tCouchDBConnection/tCouchDBConnection_messages.properties
@@ -19,3 +19,4 @@ REPLICATE_TARGET_DB.ITEM.CREATE_TARGET=Create target DB
 REPLICATE_TARGET_DB.ITEM.CANCEL_REPLICATE=IS Canceled
 CONNECTION.NAME=Connection
 AUTHENTICATION.NAME=Authentication
+REPLICATION.NAME=Replication
