--- a/org.talend.designer.components.bigdata/components/tCouchDBInput/tCouchDBInput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tCouchDBInput/tCouchDBInput_messages.properties
@@ -9,6 +9,7 @@ LONG_NAME=Read documents from CouchDB database based on an query options
 NB_LINE.NAME=NB_LINE
 PASSWORD.NAME=Password
 PORT.NAME=Port
+REPLICATION.NAME=Replication
 REQUIRED_AUTHENTICATION.NAME=Required authentication
 PROPERTY.NAME=PROPERTY
 USERNAME.NAME=Username
@@ -22,6 +23,7 @@ CONNECTION_CONF.NAME=Connection
 CONNECTION.NAME=Component List
 AUTHENTICATION.NAME=Authentication
 USE_EXISTING_CONNECTION.NAME=Use an existing connection
+EXTRACT_JSON.NAME=Extract JSON Configuration
 IS_VIRTUAL_COMPONENT.NAME=Extract JSON field
 QUERY_BY_VIEW.NAME=Query by view
 DOC.NAME=Design Document
@@ -69,3 +71,4 @@ DIE_ON_ERROR.NAME=Die on error
 
 OUTPUT.LINK=Main
 OUTPUT.MENU=Main
+SCHEMA_OPT_NUM.NAME=Min column number of optimize code 
