--- a/org.talend.designer.components.bigdata/components/tCouchDBOutput/tCouchDBOutput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tCouchDBOutput/tCouchDBOutput_messages.properties
@@ -12,6 +12,7 @@ PORT.NAME=Port
 REQUIRED_AUTHENTICATION.NAME=Required authentication
 PROPERTY.NAME=PROPERTY
 USERNAME.NAME=Username
+REPLICATION.NAME=Replication
 USE_TRIGGER_REPLICATE.NAME=Use trigger replication
 REPLICATE_TARGET_DB.NAME=Replicate target database 
 REPLICATE_TARGET_DB.ITEM.TARGET_DB_NAME=Target DB name
@@ -50,7 +51,6 @@ ROOT.ITEM.VALUE=Default value
 ROOT.NAME=Root
 SCHEMA.NAME=Schema
 JSONFIELD.NAME=Output Column
-COMPACT_FORMAT.NAME = Compact Format
 
 DATA_ACTION.ITEM.DELETE=Delete
 DATA_ACTION.ITEM.INSERT=Insert
