Fix Feature TDI-24752 :Fixe bugs about Couchbase components. https://jira.talendforge.org/browse/TDI-24752
git-svn-id: http://talendforge.org/svn/tos/trunk@99435 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tCouchbaseInput/tCouchbaseInput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tCouchbaseInput/tCouchbaseInput_messages.properties
@@ -13,7 +13,7 @@ KEY.NAME=Key
 INCLUDE_DOCS.NAME=Include docs
 INCLUSIVEEND.NAME=Inclusive end
 ISJSON.NAME=Is JSON
-FROMVIEW.NAME=Get from view
+FROMVIEW.NAME=Query by view
 ISREDUCE.NAME=Is Reduce
 DESCENDING.NAME=Descending
 LIMIT.NAME=Limit
@@ -46,7 +46,7 @@ JSONFIELD.ITEM.JSONDOC=jsonDoc
 DIE_ON_ERROR.NAME=Die on error
 IS_VIRTUAL_COMPONENT.NAME=Extract json field
 VIEWKEY.NAME=Key
-VIEWPARAMS.NAME=View
+VIEWPARAMS.NAME=Query
 VIEW_ACTION.NAME=View action
 VIEW_ACTION.ITEM.NONE=None
 VIEW_ACTION.ITEM.CREATE=Create
@@ -56,3 +56,7 @@ DOC_ACTION.NAME=Doc action
 DOC_ACTION.ITEM.NONE=None
 DOC_ACTION.ITEM.CREATE=Create
 DOC_ACTION.ITEM.DROP_CREATE=Drop create
+JSONCONFIG.NAME=Json Configuration
+CONNECTIONCONFIG.NAME=Connection
+OUTPUT.LINK=Main
+OUTPUT.MENU=Main
