--- a/org.talend.designer.components.bigdata/components/tCouchbaseOutput/tCouchbaseOutput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tCouchbaseOutput/tCouchbaseOutput_messages.properties
@@ -9,7 +9,7 @@ URIS.ITEM.URI=URI
 DBNAME.NAME=Data Bucket
 USER.NAME=Username
 PASS.NAME=Password
-IS_VIRTUAL_COMPONENT.NAME=Value is JSON
+IS_VIRTUAL_COMPONENT.NAME=Generate JSON Document
 EXPIRE.NAME=Expire
 
 DATA_ACTION.ITEM.DELETE=Delete
@@ -56,3 +56,5 @@ JSONFIELD.NAME=JSON Column
 COMPACT_FORMAT.NAME=Compact Format
 KEY.NAME=Key
 VALUE.NAME=Value
+JSONCONFIG.NAME=Json Configuration
+CONNECTIONCONFIG.NAME=Connection
