fix Feature TDI-24987: Add the ability to filter on the tHBaseInput component https://jira.talendforge.org/browse/TDI-24987
git-svn-id: http://talendforge.org/svn/tos/trunk@99633 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tHBaseInput/tHBaseInput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHBaseInput/tHBaseInput_messages.properties
@@ -37,3 +37,34 @@ HBASE_VERSION.ITEM.MAPR2=MapR 2.0.0
 CUSTOM_COMMON_SETTINGS.NAME=Custom common settings
 CUSTOM_JARS.NAME=Custom jars
 CUSTOM_JARS.ITEM.JAR_NAME=Jar name
+
+FILTER.NAME=Filter
+IS_BY_FILTER.NAME=Is By Filter
+LOGICAL_OP.NAME=Logical Operation
+LOGICAL_OP.ITEM.OR=Or
+LOGICAL_OP.ITEM.AND=And
+FILTER.ITEM.FILTER_TYPE=Filter Type
+FILTER.ITEM.FILTER_TYPE.ITEM.SINGLE_COLUMN_VALUE_FILTER=Single Column Value Filter
+FILTER.ITEM.FILTER_TYPE.ITEM.FAMILY_FILTER=Family Filter
+FILTER.ITEM.FILTER_TYPE.ITEM.QUALIFIER_FILTER=Qualifier Filter
+FILTER.ITEM.FILTER_TYPE.ITEM.COLUMN_PREFIX_FILTER=Column Prefix Filter
+FILTER.ITEM.FILTER_TYPE.ITEM.MULTIPLE_COLUMN_PREFIX_FILTER=Mulitiple Column Prefix Filter
+FILTER.ITEM.FILTER_TYPE.ITEM.COLUMN_RANGE_FILTER=Column Range Filter
+FILTER.ITEM.FILTER_TYPE.ITEM.ROW_FILTER=Row Filter
+FILTER.ITEM.FILTER_TYPE.ITEM.VALUE_FILTER=Value Filter
+FILTER.ITEM.FILTER_COLUMN=Filter Column
+FILTER.ITEM.FILTER_FAMILY=Filter Family
+FILTER.ITEM.FILTER_OPERATOR=Filter Operation
+FILTER.ITEM.FILTER_OPERATOR.ITEM.EQUAL===
+FILTER.ITEM.FILTER_OPERATOR.ITEM.NOT_EQUAL=!=
+FILTER.ITEM.FILTER_OPERATOR.ITEM.GREATER=>
+FILTER.ITEM.FILTER_OPERATOR.ITEM.GREATER_OR_EQUAL=>=
+FILTER.ITEM.FILTER_OPERATOR.ITEM.LESS=<
+FILTER.ITEM.FILTER_OPERATOR.ITEM.LESS_OR_EQUAL=<=
+FILTER.ITEM.FILTER_OPERATOR.ITEM.NO_OP=
+FILTER.ITEM.FILTER_VALUE=Filter Value
+FILTER.ITEM.FILTER_COMPARATOR_TYPE=Filter Comparator Type
+FILTER.ITEM.FILTER_COMPARATOR_TYPE.ITEM.EMPTY=
+FILTER.ITEM.FILTER_COMPARATOR_TYPE.ITEM.BINARY_COMPARATOR=Binary Comparator
+FILTER.ITEM.FILTER_COMPARATOR_TYPE.ITEM.REGEX_STRING_COMPARATOR=Regex String Comparator
+FILTER.ITEM.FILTER_COMPARATOR_TYPE.ITEM.SUBSTRING_COMPARATOR=Subtring comparator
