--- a/org.talend.designer.components.bigdata/components/tSqoopImport/tSqoopImport_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tSqoopImport/tSqoopImport_messages.properties
@@ -107,8 +107,8 @@ DISTRIBUTION.ITEM.MAPR=MapR
 
 DB_VERSION.NAME=Hadoop version
 DB_VERSION.ITEM.Cloudera_0.20_CDH3U1=Cloudera 0.20 CDH3U1
-DB_VERSION.ITEM.MapR=MapR 1.2.0
-DB_VERSION.ITEM.MapR2=MapR 2.0.0
+DB_VERSION.ITEM.MapR=MapR 1.2.0 (Sqoop 1.3)
+DB_VERSION.ITEM.MapR2=MapR 2.0.0 (Sqoop 1.4)
 DB_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1.0.0
 DB_VERSION.ITEM.HDP_1_2=Hortonworks Data Platform V1.2.0(Bimota)
 DB_VERSION.ITEM.Cloudera_CDH4=Cloudera CDH4
