--- a/org.talend.designer.hdfsbrowse/plugin.xml
+++ b/org.talend.designer.hdfsbrowse/plugin.xml
@@ -73,6 +73,18 @@
             index="HDFS:CLOUDERA:Cloudera_CDH4?USE_KRB"
             libraries="hadoop-hdfs-2.0.0-cdh4.0.1.jar;hadoop-common-2.0.0-cdh4.0.1.jar;hadoop-auth-2.0.0-cdh4.0.1.jar;commons-configuration-1.6.jar;commons-lang-2.5.jar;commons-logging-1.1.1.jar;guava-11.0.2.jar;log4j-1.2.15.jar;protobuf-java-2.4.0a.jar;slf4j-api-1.6.1.jar;slf4j-log4j12-1.6.1.jar;hadoop-conf-kerberos.jar;jetty-util-6.1.26.jar;jersey-core-1.8.jar;commons-io-2.4.jar">
       </classloader>
+      <classloader
+            index="HDFS:AMAZON_EMR:MapR_EMR"
+            libraries="hadoop-0.20.2-dev-core.jar;commons-logging-1.0.4.jar;maprfs-0.1.jar;zookeeper-3.3.2.jar">
+      </classloader>
+      <classloader
+            index="HDFS:AMAZON_EMR:APACHE_1_0_3_EMR"
+            libraries="hadoop-core-1.0.3.jar;commons-logging-1.1.1.jar;commons-configuration-1.6.jar;commons-lang-2.4.jar">
+      </classloader>
+      <classloader
+            index="HDFS:AMAZON_EMR:APACHE_1_0_3_EMR?USE_KRB"
+            libraries="hadoop-core-1.0.3.jar;commons-logging-1.1.1.jar;commons-configuration-1.6.jar;commons-lang-2.4.jar;hadoop-conf-kerberos.jar">
+      </classloader>
    </extension>
    <extension
          point="org.talend.core.runtime.service">
